syntax = "proto3";

package proto;

option go_package = "hand-in-5/proto/proto";

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative proto/proto.proto

message BidRequest {
  int64 amount = 1; 
}

message BidResponse {
  string response = 1;
}

message ResultRequest {

}

message ResultResponse {
  string response = 1;
}

service Service {
  rpc PlaceBid (BidRequest) returns (BidResponse);
  rpc AuctionResult (ResultRequest) returns (ResultResponse);
}
